experimentData/Jadx-detailedExperimentData/errorSamples/recompilation_failures/330/report-330/jadx/output.txt
Test.java:8: error: incompatible types: possible lossy conversion from float to long
        jArr[4] = ((float) jArr[4]) + 0.275f;
                                    ^
1 error
